# CGIP_HW4_Q1

./: CMakeLists.txt  Dependency.cmake  README.md
src/: main.cpp  sphere_scene.cpp
